--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,5 @@ intellij {
 }
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      增加格式校验功能<br>"""
 }
